<resources>
    <string name="app_name">APA 9 ball</string>
    <string name="label">Player Name</string>
    <string name="player_one">Player One</string>
    <string name="player_two">Player Two</string>
    <string name="skill_one">1</string>
    <string name="skill_two">1</string>
    <string name="skill_label">Skill Level</string>
    <string name="button">Submit</string>

    <string name="title_activity_score_keeper">ScoreKeeperActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="addOne">+1</string>
    <string name="subOne">-1</string>
    <string name="deadBall_label">DeadBalls</string>
    <string name="innings_label">Innings</string>
    <string name="default_zero">0</string>
</resources>
